# GameFramework

./: .gitignore  .gitmodules  GameBackendFramework.sln  Note.txt
Common/Google/: CMakeLists.txt  atomicops.h  atomicops_internals_x86_gcc.cc  atomicops_internals_x86_gcc.h  common.h  once.cc  once.h  platform_macros.h  stl_util.h  strutil.cc  strutil.h  substitute.cc  substitute.h  zero_copy_stream.h  zero_copy_stream_impl.cc  zero_copy_stream_impl.h  zero_copy_stream_impl_lite.cc  zero_copy_stream_impl_lite.h
Common/Google/tests/: CMakeLists.txt  OnceTest.cc
Common/Hpp/: Hash.h  Hpp.vcxproj  LockFreeQueue.h  NonCopyable.h  ObjectPool.h
Common/Logger/: AsyncFileLogger.cpp  AsyncFileLogger.h  CMakeLists.txt  LogStream.cpp  LogStream.h  Logger.cpp  Logger.h  Logger.vcxproj
Common/Logger/tests/: AsyncFileLoggerPerf.cc  AsyncFileLoggerTestThreads.cc  CMakeLists.txt
Common/LuaEngine/: CMakeLists.txt  ExportLuaByteBuffer.cpp  ExportLuaByteBuffer.pkg  LuaByteBuffer.cpp  LuaByteBuffer.h  LuaEngine.cpp  LuaEngine.h  LuaEngine.vcxproj  LuaFunctor.cpp  LuaFunctor.h  lua_op_t.h
Common/LuaEngine/tests/: CMakeLists.txt  test.cc
Common/Share/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  CSSysIDGroup.h  CoNotification.cpp  CoNotification.h  CoNotificationCenter.cpp  CoNotificationCenter.h  CoNotifier.cpp  CoNotifier.h  CommonException.cpp  CommonException.h  Date.cpp  Date.h  EntityEventHandler.h  EpollChannel.h  FileSystem.cpp  FileSystem.h  MgrController.cpp  MgrController.h  MsgBuffer.cpp  MsgBuffer.h  PerfTool.cpp  PerfTool.h  PollSet.cpp  PollSet.h  Reactor.cpp  Reactor.h  RpcController.cpp  RpcController.h  RpcEventHandler.h  RpcMsg.cpp  RpcMsg.h  RpcMsgParser.cpp  RpcMsgParser.h  RpcServiceHandler.cpp  RpcServiceHandler.h  SSSysIDGroup.h  Share.vcxproj  Share.vcxproj.filters  (+8 more)
Common/Share/tests/: ByteBufferTest.cc  CMakeLists.txt
Poco/: .gitignore
Poco/CppUnit/: CppUnit_vs160.vcxproj
Poco/Data/: Data_vs160.vcxproj
Poco/Data/MySQL/: MySQL_vs160.vcxproj
Poco/Foundation/: Foundation_vs160.vcxproj
Poco/JSON/: JSON_vs160.vcxproj
Poco/Net/: Net_vs160.vcxproj
Poco/Net/include/Poco/Net/: SocketImpl.h
Poco/Util/: Util_vs160.vcxproj
Poco/XML/: XML_vs160.vcxproj
Poco/lib/: CppUnitd.exp  PocoDataMySQLd.exp  PocoDatad.exp  PocoFoundationd.exp  PocoJSONd.exp  PocoNetd.exp  PocoUtild.exp  PocoXMLd.exp
Sbin/Linux/: pbbuild.sh
Sbin/Protocol/: client.pb  client.proto  server.pb  server.proto
Sbin/Resource/LuaScripts/: GmEntry.lua  ServerConfigEntry.lua
Sbin/Resource/LuaScripts/Base/: Base.lua  Common.lua  Logger.lua
Sbin/Resource/LuaScripts/ServerConfig/: GatewayCfg.lua
Sbin/Win/: Client.ilk  StartServer.bat  StopServer.bat  Tolua++.ilk  fmtd.lib
Server/Gateway/: CMakeLists.txt  Gateway.cpp  Gateway.filters  Gateway.vcxproj  Gateway.vcxproj.filters  MySQLTest.cpp  MySQLTest.h  SQLExecutor.cpp  SQLExecutor.h  SqlTest.cpp  main.cpp
Server/Gateway/GateEngine/: CMakeLists.txt  GateEngineImpl.cpp  GateEngineImpl.h  GateEntity.cpp  GateEntity.h  GateEntityDao.cpp  GateEntityDao.h  GateEntityMgr.cpp  GateEntityMgr.h  GateEvent.h  LoginCfg.cpp  LoginCfg.h  LoginCst.h  LoginMgr.cpp  LoginMgr.h  LoginProto.cpp  LoginProto.h
Server/Gateway/GateFrame/: CMakeLists.txt  GageMain.cpp  GateServer.cpp  GateServer.h
Server/Gateway/GateInterface/: GateEngine.h  GateFrame.h
Third/lua/: CMakeLists.txt  Lua51.vcxproj
Third/lua/tests/: CMakeLists.txt  LuaTest.cc
Third/pbc/: CMakeLists.txt  Pbc.vcxproj  Pbc.vcxproj.filters
Third/pbc/include/pbc/: pbc.h
Third/pbc/tests/: CMakeLists.txt  PbcrTest.cc
Third/protobuf-2.5.0/: CMakeLists.txt
Third/protobuf-2.5.0/gtest/msvc/: gtest.vcxproj  gtest_main.vcxproj
Third/protobuf-2.5.0/src/google/protobuf/: config.h
Third/protobuf-2.5.0/src/google/protobuf/io/: gzip_stream.cc
Third/protobuf-2.5.0/src/google/protobuf/stubs/: common.cc
Third/protobuf-2.5.0/vsprojects/: UpgradeLog.htm  libprotobuf.vcxproj  lite-test.vcxproj  protobuf.sln  test_plugin.vcxproj  test_plugin.vcxproj.filters  tests.vcxproj
Third/toluapp/: CMakeLists.txt  Tolua++.vcxproj  Toluapp.vcxproj
Tool/Client/: Client.cpp  Client.vcxproj
