#gateway engine
set(GATEWAY_ENGINE gateway_engine)
add_library(${GATEWAY_ENGINE} SHARED)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} GATEWAY_ENGINE_SOURCES)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/login GATEWAY_ENGINE_LOGIN_SOURCES)

set(GATEWAY_ENGINE_SOURCES 	${GATEWAY_ENGINE_SOURCES}
							${GATEWAY_ENGINE_LOGIN_SOURCES})

target_sources(${GATEWAY_ENGINE} PRIVATE ${GATEWAY_ENGINE_SOURCES})
target_link_libraries(${GATEWAY_ENGINE} PRIVATE )